Add background to home page

--- a/stylesheets/home-style.css
+++ b/stylesheets/home-style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital@0;1&display=swap');
 body {
   margin: 0 auto;
-  background: #d3d3d3;
+  background: rgb(224 224 224);
 }
 .desktop-only { display: none;}
 a { text-decoration: none;
@@ -12,13 +12,14 @@ color: inherit;}
 .color-3 { color: #d3d3d3;}
 .font-1 { font-family: 'COCOGOOSE', sans-serif; }
 .font-2 { font-family: 'Lato', sans-serif;}
-
-figure {
-  margin: 0;
+header {
+  background-image: url("../images/mobile-home-bg.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
-
 .page-navigation {
   height: 40px;
+  padding: 10px 10px;
 }
 
 .hamburger {height: 40px;}
@@ -26,25 +27,34 @@ figure {
   height: 100%;
 }
 
-.header-content {padding: 0 10px 50px 10px;}
-.header-content {
-  margin-top: 5%;
+.header-content {padding: 0 10px 50px 10px;
+margin-top: 5%;
 }
 
-.greeting {font-weight: bolder;}
+.greeting {
+  background-color: #ec5242;
+  background-image: url("../images/hero-text.svg");
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  font-weight: bolder;
+}
 
 .hero {
-  background-image: url("images/hero-text.jfif");
+  background-color: #ec5242;
+  background-image: url("../images/hero-text.svg");
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
   font-size: 2.5rem;
   margin: 0;
 }
+
 .title {
   border: 2px solid #fff;
   padding: 5px 10px;
   line-height: 30px;
+  background: #e0e0e0;
   font-size: 1rem;
 }
 
@@ -131,15 +141,6 @@ figure {
   height: 100%;
 }
 
-.partners {
-  background-color: #272a31;
-}
-
-.partners > h6 {
-  margin: 1.5rem  0;
-  font-size: 1.5rem;
-  letter-spacing: 0.1rem;
-}
 .speaker-list {
   display: flex;
   flex-direction: column;
@@ -155,7 +156,7 @@ figure {
 }
 
 .speaker-img {
-  background-image: url("images/speakers/speaker-img-bg.png");
+  background-image: url("../images/speakers/speaker-img-bg.png");
   background-repeat: no-repeat;
   background-size: 50%;
   padding: 8% 0 0 8%;
@@ -182,6 +183,16 @@ figure {
   height: 2px;
   border-radius: 1px;
   background-color: #555b68;
+}
+
+.partners {
+  background-color: #272a31;
+}
+
+.partners > h6 {
+  margin: 1.5rem  0;
+  font-size: 1.5rem;
+  letter-spacing: 0.1rem;
 }
 
 .partners {
@@ -227,7 +238,6 @@ footer > p {
   font-weight: bold;
 }
 
-/* Start of about page styling */
 
 @media screen and (min-width:768px) {
   .mobile-only { display: none;}
@@ -241,6 +251,11 @@ footer > p {
     padding: 7px 70px;
     font-size: 0.7rem;
     align-items: center;
+  }
+  header {
+    background-image: url("../images/home-desktop-background.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
   }
   .page-navigation {
     background: #fff;
@@ -276,7 +291,7 @@ footer > p {
     border: 5px solid #ec5242;
     padding: 10px;
   }
-  .greeting {font-size: 2.5rem;margin: 10px 0;}
+  .greeting {font-size: 1.5rem;margin: 10px 0;}
   .hero {font-size: 2.8rem;margin: 10px 0;}
   .header-content {
     width: 70%;
@@ -312,25 +327,24 @@ footer > p {
   }
 
   .program > h3 {
-    font-size: 0.8rem;
+    font-size: 1rem;
     padding: 0;
     text-align: center;
+    margin: 0;
+    display: flex;
+    align-items: center;
   }
 
   .program-img {
-    height: 30px;
+    height: 40px;
   }
   .program-img > img {
     width: 100%;
     height: 100%;
   }
-  .program > h3 {
-  margin: 0;
-  display: flex;
-  align-items: center;
-  }
+  
   .program > p {
-    font-size: 0.7rem;
+    font-size: 0.8rem;
     margin: 0;
     text-align: center;
   }
@@ -349,10 +363,4 @@ footer > p {
     font-size: 0.7rem;
   }
 
-  /* About-section */
-  .about-footer {
-    background: #272a31;
-    width: 100%;
-  }
-  
 }
