--- a/stylesheets/home-style.css
+++ b/stylesheets/home-style.css
@@ -4,7 +4,9 @@ body {
   margin: 0 auto;
   background: rgb(224 224 224);
 }
-.desktop-only { display: none;}
+.desktop-only { 
+  display: none;
+}
 a { text-decoration: none;
 color: inherit;}
 .color-1 { color: #ec5242; }
@@ -12,18 +14,63 @@ color: inherit;}
 .color-3 { color: #d3d3d3;}
 .font-1 { font-family: 'COCOGOOSE', sans-serif; }
 .font-2 { font-family: 'Lato', sans-serif;}
+
 header {
   background-image: url("../images/mobile-home-bg.svg");
   background-size: cover;
   background-repeat: no-repeat;
 }
+
+/* popup for mobile menu */
+.overlay {
+  background-color: black;
+  background-image: url('../images/popup-background.svg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  height: 100%;
+  width: 0;
+  position: fixed;
+  overflow: hidden;
+  z-index: 55;
+  margin: 0;
+  left: 0;
+  top: 0;
+  transition: 700ms;
+}
+
+.overlay-content {
+  display: none;
+  width: 30%;
+  list-style: none;
+  margin: 30px;
+  align-self: flex-start;
+}
+
+
+.close-btn {
+  font-size: 50px;
+  padding: 0 20px;
+  margin: 30px 10px 30px 0;
+}
+
+.page-link {
+  font-size: 32px;
+  margin-bottom: 20px;
+  color: #d3d3d3;
+  font-weight: 600;
+  line-height: 44px;
+}
+/* end of popup for mobile menu */
 .page-navigation {
   height: 40px;
   padding: 10px 10px;
 }
 
-.hamburger {height: 40px;}
-.hamburger > img {
+.ham-container {height: 40px;}
+.hamburger {
   height: 100%;
 }
 
@@ -32,12 +79,7 @@ margin-top: 5%;
 }
 
 .greeting {
-  background-color: #ec5242;
-  background-image: url("../images/hero-text.svg");
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent;
-  font-weight: bolder;
+  font-weight: bold;
 }
 
 .hero {
@@ -129,6 +171,7 @@ margin-top: 5%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 0 10px 20px 10px;
 }
 .speakers > h4{
   margin: 1.5rem  0;
@@ -176,6 +219,14 @@ margin-top: 5%;
   font-size: 0.7rem;
   font-style: italic;
   margin: 0;
+}
+
+.see-more {
+  width: 100%;
+  background-color: inherit;
+  border: 2px solid #555b68;
+  padding: 15px 0;
+  font-size: 1rem;
 }
 
 .dash {
@@ -355,7 +406,12 @@ footer > p {
     padding: 30px 0;
     -ms-grid-columns: 3fr 3fr;
     grid-template-columns: 3fr 3fr;
-    
+  }
+  .speaker-details > .about {
+    font-size: 1rem;
+  }
+  .see-more {
+    width: 300px;
   }
 
   .footer-text {
