--- a/stylesheets/about.css
+++ b/stylesheets/about.css
@@ -170,7 +170,7 @@ header {
   margin: 30px 0;
 }
 
-.previous-events > span {
+.previous-events > div {
   width: 300px;
   height: 180px;
   color: #fff;
