--- a/stylesheets/about.css
+++ b/stylesheets/about.css
@@ -1,4 +1,4 @@
-@import url('http://fonts.cdnfonts.com/css/cocogoose?styles=44178');
+@import url('https://fonts.cdnfonts.com/css/cocogoose?styles=44178');
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital@0;1&display=swap');
 
 body {
